--- a/package.json
+++ b/package.json
@@ -1,23 +1,39 @@
 {
-  "name": "nest-base",
+  "name": "@nviethuan/base",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "workspaces": {
+    "packages": [
+      "libs/common"
+    ]
+  },
   "scripts": {
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "build": "npm run build:apps:api",
+    "build:apps:api": "nest build",
+    "build:apps:api:prod": "nest build api-prod",
+    "build:lib:common": "nest build common",
+    "format:apps": "prettier --write \"apps/**/*.ts\"",
+    "format:lib": "prettier --write \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "start:api:prod": "node dist/apps/api/src/main",
+    "lint": "eslint \"{apps,libs,test}/**/*.ts\" --fix",
+    "test:api": "vitest run",
+    "test:api:watch": "vitest",
+    "test:api:cov": "vitest run --coverage",
+    "test:api:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
+    "test:api:e2e": "vitest run --config ./apps/api/test/vitest.config.e2e.ts",
+    "jest:api": "jest",
+    "jest:api:watch": "jest --watch",
+    "jest:api:cov": "jest --coverage",
+    "jest:api:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "jest:api:e2e": "jest --config ./apps/api/test/jest-e2e.json",
+    "publish:common": "npm publish -w libs/common",
+    "prepare": "husky"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -28,27 +44,40 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@swc/cli": "^0.3.10",
+    "@swc/core": "^1.4.8",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vitest/coverage-v8": "^1.4.0",
+    "commitizen": "^4.3.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "git-cz": "^4.9.0",
+    "husky": "^9.0.11",
     "jest": "^29.5.0",
+    "lint-staged": "^15.2.2",
     "prettier": "^3.0.0",
+    "run-script-webpack-plugin": "^0.2.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "unplugin-swc": "^1.4.4",
+    "vitest": "^1.4.0",
+    "webpack": "^5.90.3",
+    "webpack-node-externals": "^3.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -56,7 +85,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": ".",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
@@ -64,7 +93,28 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/apps/"
+    ]
+  },
+  "lint-staged": {
+    "*.ts": [
+      "npm run format:apps",
+      "npm run format:lib",
+      "npm run lint"
+    ],
+    "*.md": "prettier --list-different"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "git-cz"
+    }
   }
 }
