--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nviethuan/base",
-  "version": "0.0.1",
+  "version": "0.0.2-0",
   "description": "",
   "author": "",
   "private": true,
@@ -69,6 +69,7 @@
     "prettier": "^3.0.0",
     "run-script-webpack-plugin": "^0.2.0",
     "source-map-support": "^0.5.21",
+    "standard-version": "^9.5.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
