--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/api/main",
-    "dev:api": "nest build api --webpack --webpackPath webpack-hmr.config.js",
-    "dev:cli": "nest build cli --webpack --webpackPath webpack-hmr.config.js",
+    "dev:api": "nest build api --webpack --webpackPath webpack-hmr.config.js --watch",
+    "dev:cli": "nest build cli --webpack --webpackPath webpack-hmr.config.js --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
