--- a/apps/api/tsconfig.app.json
+++ b/apps/api/tsconfig.app.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": false,
-    "declarationMap": true,
+    "sourceMap": true,
     "outDir": "../../dist/apps/api"
   },
   "include": ["src/**/*"],
