--- a/package.json
+++ b/package.json
@@ -9,21 +9,30 @@
     "build": "nest build",
     "build:api": "nest build api",
     "build:api:watch": "nest build api --watch",
-    "build:api:prod": "nest build api-prod",
+    "build:api:prod": "NODE_ENV=production nest build api-prod",
     "build:cli": "nest build cli",
-    "dev": "nest build hrm-api --watch",
-    "format": "prettier --write \"apps/**/*.ts\" \"modules/**/*.ts\" \"utils/**/*.ts\"",
+    "build:cli:watch": "nest build cli --watch",
+    "build:cli:prod": "NODE_ENV=production nest build cli-prod",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/apps/api/main",
+    "start:api:dev": "nest start api --watch",
+    "start:api:debug": "nest start api --debug --watch",
+    "start:api:prod": "node dist/apps/api/main",
+    "start:cli:dev": "nest start cli --watch",
+    "start:cli:debug": "nest start cli --debug --watch",
+    "start:cli:prod": "node dist/apps/cli/main",
+    "format": "prettier --write \"apps/**/*.ts\" \"modules/**/*.ts\" \"utils/**/*.ts\"",
     "lint": "eslint \"{src,apps,modules}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/api/test/jest-e2e.json",
-    "docs:venv": "sh ./scripts/venv.sh"
+    "docs:venv": "sh ./scripts/venv.sh",
+    "vtest": "vitest run",
+    "vtest:watch": "vitest",
+    "vtest:cov": "vitest run --coverage",
+    "vtest:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
+    "vtest:e2e": "vitest run --config ./vitest.config.e2e.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -37,12 +46,14 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@swc/core": "^1.4.11",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vitest/coverage-v8": "^1.4.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -56,6 +67,8 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3",
+    "unplugin-swc": "^1.4.4",
+    "vitest": "^1.4.0",
     "webpack": "^5.91.0",
     "webpack-node-externals": "^3.0.0"
   },
