--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,11 +17,59 @@
       "name": "Launch Program",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/dist/apps/api/main.js",
-      // "preLaunchTask": "npm: build",
-      // "outFiles": ["${workspaceFolder}/dist/**/*.js"],
       "envFile": "${workspaceFolder}/apps/api/.env",
       "outputCapture": "std",
       "console": "internalConsole"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Build & Launch Program",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "${workspaceFolder}/dist/apps/api/main.js",
+      "preLaunchTask": "npm: build",
+      "outFiles": ["${workspaceFolder}/dist/**/*.js"],
+      "envFile": "${workspaceFolder}/apps/api/.env",
+      "outputCapture": "std",
+      "console": "internalConsole"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Vitest Current File",
+      "program": "${workspaceFolder}/node_modules/.bin/vitest",
+      "args": [
+        "run",
+        "--config",
+        "./vitest.config.debug.mts",
+        "${fileBasenameNoExtension}",
+      ],
+      "console": "internalConsole",
+      "outputCapture": "std",
+      "internalConsoleOptions": "neverOpen",
+      "windows": {
+        "program": "${workspaceFolder}/node_modules/vitest/vitest.mjs"
+      },
+      "envFile": "${workspaceFolder}/.env"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Vitest e2e Current File",
+      "program": "${workspaceFolder}/node_modules/.bin/vitest",
+      "args": [
+        "run",
+        "--config",
+        "./vitest.config.e2e.debug.mts",
+        "${relativeFile}",
+      ],
+      "console": "internalConsole",
+      "outputCapture": "std",
+      "internalConsoleOptions": "neverOpen",
+      "windows": {
+        "program": "${workspaceFolder}/node_modules/vitest/vitest.mjs"
+      },
+      "envFile": "${workspaceFolder}/.env"
     }
   ]
 }
