--- a/package.json
+++ b/package.json
@@ -22,17 +22,12 @@
     "start:cli:prod": "node dist/apps/cli/main",
     "format": "prettier --write \"apps/**/*.ts\" \"modules/**/*.ts\" \"utils/**/*.ts\"",
     "lint": "eslint \"{src,apps,modules}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/api/test/jest-e2e.json",
     "docs:venv": "sh ./scripts/venv.sh",
     "vtest": "vitest run",
     "vtest:watch": "vitest",
     "vtest:cov": "vitest run --coverage",
-    "vtest:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
-    "vtest:e2e": "vitest run --config ./vitest.config.e2e.ts"
+    "vtest:debug": "vitest --inspectBrk --inspect --logHeapUsage --no-file-parallelism",
+    "vtest:e2e": "vitest run --config ./vitest.config.e2e.mts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -48,7 +43,6 @@
     "@nestjs/testing": "^10.0.0",
     "@swc/core": "^1.4.11",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -57,12 +51,10 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "swc-loader": "^0.2.6",
-    "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
