--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nestjs/testing": "^10.0.0",
     "@swc/core": "^1.4.11",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -81,10 +82,12 @@
     "testEnvironment": "node",
     "roots": [
       "<rootDir>/apps/",
-      "<rootDir>/modules/"
+      "<rootDir>/modules/",
+      "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
-      "^@modules/user(|/.*)$": "<rootDir>/modules/user/src/$1"
+      "^@modules/user(|/.*)$": "<rootDir>/modules/user/src/$1",
+      "^defaultLibraryPrefix/abc(|/.*)$": "<rootDir>/libs/abc/src/$1"
     }
   }
 }
