--- a/libs/mongo/tsconfig.lib.json
+++ b/libs/mongo/tsconfig.lib.json
@@ -2,9 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "declaration": true,
-    "declarationMap": true,
-    "outDir": "../../dist/core",
-    "declarationDir": "../../dist/core"
+    "outDir": "../../dist/libs/mongo"
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
