--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "mongoose": "^8.2.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -87,7 +89,8 @@
     ],
     "moduleNameMapper": {
       "^@modules/user(|/.*)$": "<rootDir>/modules/user/src/$1",
-      "^defaultLibraryPrefix/abc(|/.*)$": "<rootDir>/libs/abc/src/$1"
+      "^defaultLibraryPrefix/abc(|/.*)$": "<rootDir>/libs/abc/src/$1",
+      "^@app/mongo(|/.*)$": "<rootDir>/libs/mongo/src/$1"
     }
   }
 }
